# stm32f401ccu6-template

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: CMakeLists.txt
cmake/: arm-none-eabi-gcc.cmake
cmsis/: CMakeLists.txt
platform/: CMakeLists.txt
src/: CMakeLists.txt  main.c
